[package]
name = "ps2-events"
version = "0.1.0"
authors = ["Mark Gross <mark.gross2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = { version = "0.26" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
